# CsvDatabase

./: .gitignore  CsvDatabase.cabal  CsvDatabase.hs  CsvParser.hi  CsvParser.hs  CsvStats.hs  Csvstuff.hs  README.MD  csvDatabase.cabal  csvdatabase.hi  csvstuff.hi  stack.yaml
src/: CsvDatabase.hs  CsvParser.hs  CsvStats.hs  Csvstuff.hs  PersistentTest.hs  Test.hs  Types.hs  copyCsv  scoreTable.csv
